# oxrdflib

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml
oxrdflib/: __init__.py  _converter.py  _type.py  _types.py  parser.py  parsers.py  serializer.py  store.py  stores.py
oxrdflib/utils/: converter.py
src/oxrdflib/: __init__.py  _converter.py  _type.py  parser.py  serializer.py  store.py
tests/: test_dataset.py  test_graph.py  test_graph_context.py  test_parser.py  test_serializer.py  test_sled.py  test_sparql.py  test_store.py
tests/data/: test.nq  test.nt  test.rdf  test.ttl
