[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
authors = [{ name = "Tpt", email = "thomas@pellissier-tanon.fr" }]
description = "rdflib stores based on pyoxigraph"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = ["pyoxigraph~=0.3.14", "rdflib>=6.3,<8.0"]
dynamic = ["version"]
license = { text = "BSD-3-Clause" }
name = "oxrdflib"
readme = "README.md"
requires-python = ">=3.7"


[project.entry-points."rdf.plugins.store"]
Oxigraph = "oxrdflib.store:OxigraphStore"
OxMemory = "oxrdflib.store:OxigraphStore"
OxSled = "oxrdflib.store:OxigraphStore"


[project.entry-points."rdf.plugins.parser"]
ox-turtle = "oxrdflib.parser:OxigraphTurtleParser"
ox-n3 = "oxrdflib.parser:OxigraphNTriplesParser"
"ox-rdf/xml" = "oxrdflib.parser:OxigraphRdfXmlParser"


[project.urls]
Changelog = "https://github.com/oxigraph/oxrdflib/blob/main/CHANGELOG.md"
Documentation = "https://github.com/oxigraph/oxrdflib/blob/main/README.md"
Homepage = "https://github.com/oxigraph/oxrdflib"
Source = "https://github.com/oxigraph/oxrdflib"
Tracker = "https://github.com/oxigraph/oxrdflib/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C40",
    "C901",
    "E",
    "F",
    "FLY",
    "I",
    "ICN",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T10",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.setuptools_scm]
