[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

[project]
authors = [
    { name = "Tpt", email = "thomas@pellissier-tanon.fr" },
    { name = "Nikola", email = "me@thisisnikola.com" },
]
description = "rdflib stores based on pyoxigraph"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = ["pyoxigraph~=0.5.0", "rdflib>=6.3,<8.0"]
license = { text = "BSD-3-Clause" }
name = "oxrdflib"
maintainers = [
    { name = "Tpt", email = "thomas@pellissier-tanon.fr" }
]
readme = "README.md"
requires-python = ">=3.8"
version = "0.5.0"

[dependency-groups]
coverage = ["pytest~=8.0", "pytest-cov>=5,<7"]
dev = ["requests~=2.0"]

[project.entry-points."rdf.plugins.store"]
Oxigraph = "oxrdflib.store:OxigraphStore"
oxigraph = "oxrdflib.store:OxigraphStore"

[project.entry-points."rdf.plugins.parser"]
ox-json-ld = "oxrdflib.parser:OxigraphJsonLdParser"
ox-streaming-json-ld = "oxrdflib.parser:OxigraphStreamingJsonLdParser"
ox-turtle = "oxrdflib.parser:OxigraphTurtleParser"
ox-ttl = "oxrdflib.parser:OxigraphTurtleParser"
ox-n3 = "oxrdflib.parser:OxigraphN3Parser"
ox-nq = "oxrdflib.parser:OxigraphNQuadsParser"
ox-nquads = "oxrdflib.parser:OxigraphNQuadsParser"
ox-ntriples = "oxrdflib.parser:OxigraphNTriplesParser"
ox-nt = "oxrdflib.parser:OxigraphNTriplesParser"
ox-nt11 = "oxrdflib.parser:OxigraphNTriplesParser"
ox-trig = "oxrdflib.parser:OxigraphTriGParser"
ox-xml = "oxrdflib.parser:OxigraphRdfXmlParser"

[project.entry-points."rdf.plugins.serializer"]
ox-json-ld = "oxrdflib.serializer:OxigraphJsonLdSerializer"
ox-streaming-json-ld = "oxrdflib.serializer:OxigraphJsonLdSerializer"
ox-turtle = "oxrdflib.serializer:OxigraphTurtleSerializer"
ox-ttl = "oxrdflib.serializer:OxigraphTurtleSerializer"
ox-n3 = "oxrdflib.serializer:OxigraphN3Serializer"
ox-nq = "oxrdflib.serializer:OxigraphNQuadsSerializer"
ox-nquads = "oxrdflib.serializer:OxigraphNQuadsSerializer"
ox-ntriples = "oxrdflib.serializer:OxigraphNTriplesSerializer"
ox-nt = "oxrdflib.serializer:OxigraphNTriplesSerializer"
ox-nt11 = "oxrdflib.serializer:OxigraphNTriplesSerializer"
ox-trig = "oxrdflib.serializer:OxigraphTriGSerializer"
ox-xml = "oxrdflib.serializer:OxigraphRdfXmlSerializer"

[project.urls]
Changelog = "https://github.com/oxigraph/oxrdflib/blob/main/CHANGELOG.md"
Documentation = "https://github.com/oxigraph/oxrdflib/blob/main/README.md"
Homepage = "https://github.com/oxigraph/oxrdflib"
Source = "https://github.com/oxigraph/oxrdflib"
Tracker = "https://github.com/oxigraph/oxrdflib/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "F",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
